nuova copertina per folio01

--- a/articoli/varie/ultima_copertina.tex
+++ b/articoli/varie/ultima_copertina.tex
@@ -1,4 +1,4 @@
-\ThisTileWallPaper{21cm}{29,7cm}{articoli/varie/immagini/ultima_copertina.png}
+\ThisTileWallPaper{21cm}{29,7cm}{articoli/varie/immagini/folio-retro.jpg}
 \onecolumn
 \thispagestyle{empty}
 \vspace*{6,5cm}
