--- a/folio_00.tex
+++ b/folio_00.tex
@@ -2,7 +2,7 @@
 \documentclass[a4paper,onecolumn,oneside,11pt,final]{article} % utilizziamo il package article (che mi permette di inserire contenuti e titoli nella stessa pagina), in formato a4paper, con carattere a 11pt su una colonna, con stesura finale e su una facciata unica
 \usepackage[italian]{babel} % scriviamo in italiano
 \usepackage[T1]{fontenc} % utilizziamo lo standard T1 per la codifica dei caratteri
-\usepackage[default]{cantarell} % utilizziamo il carattere di Fedora
+%\usepackage[default]{cantarell} % utilizziamo il carattere di Fedora
 \usepackage[utf8]{inputenc} % possiamo inserire direttamente dalla tastiera i caratteri accentati
 \usepackage{magaz} % utilizziamo il package aggiuntivo magaz (di default in una installazione di texlive) per utilizzare comandi specifici per le riviste, come la formattazione della prima lettera dell'articolo
 %\usepackage{dejavu} % utilizziamo il package dei fonts dejavu (da inserire come pacchetto aggiuntivo)
@@ -38,7 +38,7 @@ articoli/varie/ultima_copertina
 \DeclareGraphicsExtensions{.png, .jpg, .jpeg}%dichiaro le estensioni che è possibile usare per le immagini
 %Inizio del documento vero e proprio, quello che verrà stampato richiamando i comandi presenti nei package che abbiamo richiamato nel preambolo
 \setlength{\columnsep}{12mm} % impostiamo la distanza di 12 mm. tra le colonne
-\ThisTileWallPaper{21cm}{29,7cm}{immagini/copertina/sfondo.jpg} % inseriamo la copertina
+\ThisTileWallPaper{21cm}{29,7cm}{immagini/copertina/folio.jpg} % inseriamo la copertina
 \begin{document}
 \thispagestyle{empty}
 \
